# python-fastapi-example

./: .dockerignore  DockerFile  Dockerfile  README.md  pyproject.toml
.devcontainer/: Dockerfile  devcontainer.json  docker-compose.yml
src/: context.py  main.py
src/core/: logger.py
src/core/config/: settings.py
src/core/middleware/: application.py
