[tool.poetry]
name = "fastapi-example"
version = "0.1.0"
description = ""
authors = ["Tung CT < can.thanh.tung@outlook.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
fastapi = "^0.110.2"
uvicorn = "^0.29.0"
gunicorn = "^22.0.0"
asgi-correlation-id = "^4.3.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
